@@ -5,7 +5,8 @@ Changelog
 1.5.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Use font family definitions from plonetheme.blueberry
+  [Kevin Bieri]
 
 
 1.5.1 (2016-06-23)
